--- a/updates.html
+++ b/updates.html
@@ -1,4 +1,4 @@
 # Updates
 v1.0.1 is the lastest version for all devices
 
-if your in a lower version pls update here:<a href="">update to lastest</a>
+if your in a lower version pls update here: https://github.com/mangoisbest/botzstoreHTML5/releases
